# icelect

./: .gitignore  MANIFEST.in  README.md  admin.py  constraints.txt  db.sql  gen-credentials.py  icelect-admin  icelect-registrar  pyproject.toml  registrar.py  setup.py  web.sh
etc/: icelect.service.example  uwsgi.ini.example
icelect/: config.py.example  crypto.py  db.py  election.py  json_walker.py  results.py  schulze.py  web.py
icelect/templates/: ballots.html  base.html  check-vote.html  election.html  index.html  login.html  results.html  vote.html
static/: style.css
tests/: test_electowiki.py  test_trivial.py
tests/csv/: electowiki-1.csv  electowiki-1.in  electowiki-2.csv  electowiki-2.in  electowiki-3.csv  electowiki-3.in  electowiki-4.csv  electowiki-4.in  ew-to-csv.py
